FEAT: AWS S3를 이용한 다중 이미지 업로드 구현
- product create와 동시에 이미지 업로드 동작하도록 구현
- S3에 저장되는 경로는 UUID 사용하여 중복값 없도록 설정

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### application ###
+application-aws.yml
+application-credentials.yml
+application-jwt.yml
+application-dev.yml
+application-rds.yml
+
 ### STS ###
 .apt_generated
 .classpath
